--- a/site/v1/src/assets/style.css
+++ b/site/v1/src/assets/style.css
@@ -14,6 +14,9 @@ body{
   color:white;
 }
 /* ------------------ TIMELINE -- */
+#line{
+  padding-top:0;
+}
 .vis-panel{
   font-weight:800;font-size:.8em;
 }
