--- a/site/v1/src/assets/style.css
+++ b/site/v1/src/assets/style.css
@@ -3,17 +3,20 @@
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
   text-align: center;
-  background-color:rgba(255,255,255,.5);
+  background-color:rgba(255,255,255,0);
+  a{font-weight:800;color:rgba(36,255,239,.8);}
 }
 body{
   /*background-color:rgba(0,0,0,1);*/
 }
+/* +++++++++++++++++++++++++++++++++++++++++++++ BULMA OVERRIDE +++++++ */
 .container{margin:0;}
 #vue-root{margin:0;background-color:transparent;}
 #console{
   background-color:black;
   color:rgba(0,255,0,1);
   margin:0;padding:0;
+  position: relative;
   width:100%;
 }
 .tile{background-color:inherit;color:rgba(0,255,0,1);}
