timeline loading fit once watch

--- a/site/v1/src/sass/style.scss
+++ b/site/v1/src/sass/style.scss
@@ -89,3 +89,9 @@ $input-shadow: none;
   font-size:.9em;
   color:rgba(5,5,5,.5);
 }
+.dv-time-item{
+.dv-time-item-w-geo{
+  font-size:1.1em;
+  color: $pink;
+}
+}
