--- a/site/v1/src/sass/style.scss
+++ b/site/v1/src/sass/style.scss
@@ -52,6 +52,8 @@ $input-shadow: none;
   color:inherit;
 }
 
+/* +++++++++++++++++++++++++++++++++++++++ network ++ */
+#network{height:80vh;}
 /* +++++++++++++++++++++++++++++++++++++++ timeline ++ */
 #timeline{
   padding-top:0;
