--- a/site/v1/src/sass/style.scss
+++ b/site/v1/src/sass/style.scss
@@ -54,9 +54,11 @@ $input-shadow: none;
 
 /* +++++++++++++++++++++++++++++++++++++++ network ++ */
 #network{
-  height:80vh;
-  background-color:#3f1a4f;
+    // height:80vh;
+    height:auto;
+  background-color:rgba(255,255,255,.1);
 }
+
 /* +++++++++++++++++++++++++++++++++++++++ timeline ++ */
 #timeline{
   padding-top:0;
