all columned up

--- a/site/v1/src/sass/style.scss
+++ b/site/v1/src/sass/style.scss
@@ -26,6 +26,9 @@ $input-shadow: none;
 /* +++++++++++++++++++++++++++++++++++++++++++++++++++ local ++ */
 /* +++++++++++++++++++++++++++++++++++++++ noui ++ */
 
+$height-header:3vh;
+$height-main:calc(100vh - #{$height-header});
+
 .noUi-pips-horizontal{height:auto;}
 
 #app{
@@ -42,6 +45,8 @@ $input-shadow: none;
   width:100%;
 }
 
+.dv-vertical-columns{height:$height-main;}
+
 #console{
   background-color:rgba(0,0,0,.8);
   color:#00eb11;
@@ -54,9 +59,24 @@ $input-shadow: none;
 
 /* +++++++++++++++++++++++++++++++++++++++ network ++ */
 #network{
-    // height:80vh;
-    height:auto;
-  background-color:rgba(255,255,255,.1);
+  background-color:rgba(55,235,255,.0);
+  height:100%;
+    /*position:relative;*/
+  // height: 100vh;
+  // width: 100%;
+  /*min-height: calc(100vh - #{$navbar-height});*/
+  /*height:auto;width:auto;*/
+  /*display: block;*/
+  overflow:hidden;
+
+svg {
+/*height:50vh;*/
+background-color:rgba(25,255,255,.0);
+height:50%;
+width:100%;
+  overflow:hidden;
+}
+
 }
 
 /* +++++++++++++++++++++++++++++++++++++++ timeline ++ */
