--- a/site/v1/src/sass/style.scss
+++ b/site/v1/src/sass/style.scss
@@ -61,6 +61,7 @@ $height-main:calc(100vh - #{$height-header});
 #network{
   background-color:rgba(55,235,255,.0);
   height:100%;
+  width:100%;
     /*position:relative;*/
   // height: 100vh;
   // width: 100%;
@@ -71,13 +72,15 @@ $height-main:calc(100vh - #{$height-header});
 
 svg {
 /*height:50vh;*/
+outline: black solid 1px;
+position:relative;
 background-color:rgba(25,255,255,.0);
-height:50%;
+height:100%;
 width:100%;
   overflow:hidden;
 }
-
 }
+
 
 /* +++++++++++++++++++++++++++++++++++++++ timeline ++ */
 #timeline{
