refactored entities to borrow selection code frm pkerpedjiev

--- a/site/v1/src/sass/style.scss
+++ b/site/v1/src/sass/style.scss
@@ -81,6 +81,18 @@ width:100%;
 }
 }
 
+.edge {
+  fill: none;
+  stroke: #bbb;
+}
+// circle{
+//   color:rgba(244,222,244,.5);
+// }
+circle{
+&.selected{
+  stroke:magenta;
+  stroke-width:3;
+}}
 
 /* +++++++++++++++++++++++++++++++++++++++ timeline ++ */
 #timeline{
