working select-deselect sizes from .env

--- a/site/v1/src/sass/style.scss
+++ b/site/v1/src/sass/style.scss
@@ -90,9 +90,8 @@ width:100%;
 // }
 circle{
 &.selected{
-  stroke:black;
-  fill:black;
-  stroke-width:33;
+  stroke:yellow;
+  stroke-width:3;
   
 }}
 
