bezier+select+on.native+on.vue=working

--- a/site/v1/src/sass/style.scss
+++ b/site/v1/src/sass/style.scss
@@ -81,9 +81,10 @@ width:100%;
 }
 }
 
-.edge {
+.link {
   fill: none;
-  stroke: #bbb;
+  stroke: black;
+  stroke-width:1px;
 }
 // circle{
 //   color:rgba(244,222,244,.5);
