universal mute we need

--- a/site/v1/src/sass/style.scss
+++ b/site/v1/src/sass/style.scss
@@ -126,6 +126,11 @@ stroke-opacity:.2;
   stroke-width:1px;
   stroke-color:#333;
 }
+.link.muted{
+stroke-opacity:.2;
+  stroke-width:1px;
+  stroke-color:#333;
+}
 
 circle{
   r:6;
