--- a/site/v1/src/sass/style.scss
+++ b/site/v1/src/sass/style.scss
@@ -1,5 +1,8 @@
 // Import a Google Font
 // @import url('https://fonts.googleapis.com/css?family=Nunito:400,700');
+$font-body: 'Fira Sans Condensed', sans-serif;
+// $font-body: 'K2D', sans-serif;
+// $font-body: 'Nanum Gothic', sans-serif;
 
 // Set your brand colors
 $purple: #8A4D76;
@@ -23,9 +26,13 @@ $control-border-width: 2px;
 $input-border-color: transparent;
 $input-shadow: none;
 
-$dalyNode:black;
-$nondalyNode:rgba(125,125,125,1);
-$dalyLink:#09F130;
+$dalyNode:rgba(5,5,5,.9);
+$nondalyNode:#bbbfbd;
+$dalyLink:#80a1d4;
+//#09F130;
+// #b486ab
+// #dbd8ae
+// #80a1d4
 $nondalyLink:rgba(25,25,25,.8);
 
 $dv-green: $nondalyNode;
@@ -43,13 +50,25 @@ $A: $dalyLink;
 
 body{width:100%;height:100%;
   // color:$dv-copy;
+  font-family: $font-body;
   // background-color:$dv-black;
+}
+
+::selection {
+  background: $dv-copy; /* WebKit/Blink Browsers */
+  color:$dv-black;
+}
+::-moz-selection {
+  background: $dv-copy; /* Gecko Browsers */
+  color:$dv-black;
 }
 
 #vue-root{
   margin:0;
   max-width:100%;
   width:100%;
+  position:relative;
+  top:-5px;
   .navbar{
     // background-color:inherit;
   }
@@ -119,6 +138,8 @@ body{width:100%;height:100%;
 
 #dv-graph-wrapper{
   background-color:$dv-black;
+  border-top:5px solid $dv-subdued;
+  margin-top:16px;
 }
 #dv-graph-copy-wrapper{
 height:90vh;
@@ -147,7 +168,7 @@ height:90vh;
 .dv-column-right {
   color: $dv-copy;
   overflow-y: hidden;
-  padding-top:9em;
+  padding-top:5em;
   // background-color:adjust-color($dv-black,$alpha:-0.1);
   // background-color:adjust-color($body-background-color, $alpha: -0.4);
   // border-left:solid 1px white;
@@ -172,7 +193,7 @@ height:90vh;
   height:100%;
   width:100%;
   // border:none;
-  border-top:1px solid $dv-subdued;
+  border-top:5px solid $dv-subdued;
   overflow:hidden;
 
 svg {
@@ -303,9 +324,12 @@ src:local('Nanum_Gothic'),local('Nanum_Gothic'),url('assets/fonts/Nanum_Gothic/N
   background-color:rgba(0,0,0,.05)
 }
 .vis-item {
-  // background-color:$dv-black;
+  background-color:$dv-black;
   color:$dv-copy;
-  border-color:$dv-copy;
+  border-color:white;
+  &:hover{
+    background-color:$dv-green;
+  }
 }
 .vis-item.vis-box{
   border-radius:3px;
@@ -320,7 +344,7 @@ src:local('Nanum_Gothic'),local('Nanum_Gothic'),url('assets/fonts/Nanum_Gothic/N
 }
 .vis-item.vis-point.vis-selected, .vis-item.vis-selected{
   background-color:$dv-green;
-  color:$dv-black;
+  color:black;
   border-color:$dv-green;
   .dv-time-item-w-geo{color:$dv-copy;}
 }
@@ -335,8 +359,9 @@ src:local('Nanum_Gothic'),local('Nanum_Gothic'),url('assets/fonts/Nanum_Gothic/N
 }
 .dv-time-item{
 .dv-time-item-w-geo{
-  font-size:1.4em;
-  color: $dv-green;
+  // font-size:1em;
+  color: $dv-copy;
+  font-weight:800;
 }
 }
 
