--- a/site/v1/src/sass/style.scss
+++ b/site/v1/src/sass/style.scss
@@ -318,6 +318,12 @@ src:local('Nanum_Gothic'),local('Nanum_Gothic'),url('assets/fonts/Nanum_Gothic/N
 /* ++++++++++++++++++++++++++++++++++++++++ /\ FONTS- ++ */
 
 
+/* ++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++ \/ INDEX ++ */
+.dv-index-entities{font-size:.7em;}
+// .dv-index-table{overflow-x: scroll;}
+/* ++++++++++++++++++++++++++++++++++++++++ /\ INDEX- ++ */
+
+
 /* ++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++ \/ TIMELINE ++ */
 #timeline{
   padding-top:0;
