--- a/site/v1/src/sass/style.scss
+++ b/site/v1/src/sass/style.scss
@@ -147,7 +147,24 @@ body{width:100%;height:100%;
 // height:90vh;
 }
 
+#dv-index-graph{
+height:($height-main - $height-header);
+  width:50%;
+  background-color:$dv-black;
+  z-index:2;
+}
 #dv-timeline-graph{
+// height:100%;
+height:($height-main - $height-header);
+
+  // margin-top:1em;
+  // background-color:adjust-color($dv-black,$alpha:-0.4);
+  // padding:2em 0 5em 0;
+  width:50%;
+  background-color:$dv-black;
+  z-index:2;
+}
+#dv-murderers-graph{
 // height:100%;
 height:($height-main - $height-header);
 
@@ -398,3 +415,26 @@ src:local('Nanum_Gothic'),local('Nanum_Gothic'),url('assets/fonts/Nanum_Gothic/N
   // rgba(255,255,255,.2);
 }
 /* ++++++++++++++++++++++++++++++++++++++++ /\ TIMELINE- ++ */
+
+.dv-dl {
+  // width: 40%;
+
+  dt {
+    float: left;
+    margin-right: 10%;
+    max-width: 40%;
+    font-weight: bold;
+  }
+  
+  dd {
+    color: grey;
+    // margin-left: 50%;
+    margin-bottom: .5em;
+  }
+  
+  dd::after {
+    content: " ";
+    display: block;
+    clear: left;
+  }  
+}
