--- a/site/v1/src/sass/style.scss
+++ b/site/v1/src/sass/style.scss
@@ -113,6 +113,10 @@ body{width:100%;height:100%;
 
 /* ++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++ \/ dv- ++ */
 
+.dv-murder-explain{
+  padding:1em 1em;
+}
+
 .dv-index-graph-item{
   font-size:.9em;
   padding:0 5em;
